Implementing EventFilterRunner (WIP)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 bootstrap.servers=127.0.0.1:9092
-topic.name=wikimedia-recent-change-events
 group.id=wikimedia-stream-filter-app-group
-auto.offset.reset=earliest
+source.topic.name=wikimedia-recent-change-events
+sink.topic.name=wikimedia-filtered-change-events
