--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ bootstrap.servers=127.0.0.1:9092
 group.id=wikimedia-stream-filter-app-group
 source.topic.name=wikimedia-recent-change-events
 sink.topic.name=wikimedia-filtered-change-events
+filter.title.urls=https://pt.wikipedia.org/wiki/Guilherme_Boulos,https://pt.wikipedia.org/wiki/Datena,https://pt.wikipedia.org/wiki/Bebetto_Haddad,https://pt.wikipedia.org/wiki/João_da_Costa_Pimenta,https://pt.wikipedia.org/wiki/Pablo_Marçal,https://pt.wikipedia.org/wiki/Ricardo_Nunes_(político),https://pt.wikipedia.org/wiki/Tabata_Amaral
