--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
         <main.class>org.taulin.WikimediaStreamFilterApp</main.class>
 
-        <flink.version>1.20.0</flink.version>
+        <flink.version>1.17.2</flink.version>
         <flink.connector.version>1.17.2</flink.connector.version>
         <avro.version>1.11.1</avro.version>
         <slf4j.version>2.0.16</slf4j.version>
@@ -28,6 +28,11 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-clients</artifactId>
             <version>${flink.version}</version>
         </dependency>
         <dependency>
@@ -125,6 +130,8 @@
                         </goals>
                         <configuration>
                             <sourceDirectory>${project.basedir}/src/main/avro</sourceDirectory>
+                            <fieldVisibility>PUBLIC</fieldVisibility>
+                            <createSetters>true</createSetters>
                             <outputDirectory>${project.build.directory}/generated-sources/avro</outputDirectory>
                             <imports>
                                 <import>${project.basedir}/src/main/avro/MetaModel.avsc</import>
