--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
         <main.class>org.taulin.WikimediaStreamFilterApp</main.class>
 
         <flink.version>1.17.2</flink.version>
-        <flink.connector.version>1.17.2</flink.connector.version>
         <avro.version>1.11.1</avro.version>
         <slf4j.version>2.0.16</slf4j.version>
         <guice.version>7.0.0</guice.version>
@@ -44,7 +43,7 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka</artifactId>
-            <version>${flink.connector.version}</version>
+            <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
